--- a/i18n/vi/code.json
+++ b/i18n/vi/code.json
@@ -27,10 +27,10 @@
     "message": "Work With Me"
   },
   "about.workWithMe.intro": {
-    "message": "我目前對以下機會保持開放："
+    "message": "Tôi hiện đang mở cửa cho các cơ hội sau:"
   },
   "about.workWithMe.contact": {
-    "message": "如果你覺得我們可能有合作的空間，歡迎透過 {linkedinLink} 聯繫我。"
+    "message": "Nếu bạn nghĩ có thể có không gian hợp tác, hãy liên hệ với tôi qua {linkedinLink}."
   },
   "about.meta.title": {
     "message": "About"
@@ -733,5 +733,13 @@
   },
   "projects.noResults": {
     "message": "Không có dự án nào phù hợp với bộ lọc."
+  },
+  "theme.unlistedContent.title": {
+    "message": "Trang không được liệt kê",
+    "description": "The unlisted content banner title"
+  },
+  "theme.unlistedContent.message": {
+    "message": "Trang này không được liệt kê. Công cụ tìm kiếm sẽ không lập chỉ mục trang này, và chỉ người dùng có liên kết trực tiếp mới có thể truy cập.",
+    "description": "The unlisted content banner message"
   }
 }
