--- a/i18n/ko/code.json
+++ b/i18n/ko/code.json
@@ -733,5 +733,13 @@
   },
   "projects.noResults": {
     "message": "필터와 일치하는 프로젝트가 없습니다."
+  },
+  "theme.unlistedContent.title": {
+    "message": "비공개 페이지",
+    "description": "The unlisted content banner title"
+  },
+  "theme.unlistedContent.message": {
+    "message": "이 페이지는 비공개입니다. 검색 엔진에 색인되지 않으며, 직접 링크가 있는 사용자만 접근할 수 있습니다.",
+    "description": "The unlisted content banner message"
   }
 }
