--- a/i18n/zh-cn/code.json
+++ b/i18n/zh-cn/code.json
@@ -733,5 +733,13 @@
   },
   "projects.noResults": {
     "message": "没有符合筛选条件的项目。"
+  },
+  "theme.unlistedContent.title": {
+    "message": "未列出页面",
+    "description": "The unlisted content banner title"
+  },
+  "theme.unlistedContent.message": {
+    "message": "此页面未列出。搜索引擎不会对其进行索引，只有拥有直接链接的用户才能访问。",
+    "description": "The unlisted content banner message"
   }
 }
